py2o2/src/parser/snapshots/py2o2__parser__expr__test__expr-10.snap
---
source: py2o2/src/parser/expr.rs
expression: "expr(\"f(1, a = 2)\").finish().unwrap()"
---
(
    "",
    Call {
        func: Name {
            id: "f",
        },
        args: [
            Constant {
                value: Float(
                    1.0,
                ),
            },
        ],
        keywords: [
            Keyword {
                arg: Some(
                    "a",
                ),
                value: Constant {
                    value: Float(
                        2.0,
                    ),
                },
            },
        ],
    },
)
