py2o2/src/parser/snapshots/py2o2__parser__expr__test__expr-11.snap
---
source: py2o2/src/parser/expr.rs
expression: "expr(r#\"f(1, \"test\")\"#).finish().unwrap()"
---
(
    "",
    Call {
        func: Name {
            id: "f",
        },
        args: [
            Constant {
                value: Float(
                    1.0,
                ),
            },
            Constant {
                value: String(
                    "test",
                ),
            },
        ],
        keywords: [],
    },
)
