py2o2/src/parser/snapshots/py2o2__parser__expr__test__expr-12.snap
---
source: py2o2/src/parser/expr.rs
expression: "expr(\"None ()\").finish().unwrap()"
---
(
    "",
    Call {
        func: None,
        args: [],
        keywords: {},
    },
)
