py2o2/src/parser/snapshots/py2o2__parser__expr__test__expr-13.snap
---
source: py2o2/src/parser/expr.rs
expression: "expr(\"f(1).g.h(2, 3)\").finish().unwrap()"
---
(
    "",
    Call {
        func: Attribute {
            value: Attribute {
                value: Call {
                    func: Name {
                        id: "f",
                    },
                    args: [
                        Constant {
                            value: Float(
                                1.0,
                            ),
                        },
                    ],
                    keywords: [],
                },
                attr: "g",
            },
            attr: "h",
        },
        args: [
            Constant {
                value: Float(
                    2.0,
                ),
            },
            Constant {
                value: Float(
                    3.0,
                ),
            },
        ],
        keywords: [],
    },
)
