py2o2/src/parser/snapshots/py2o2__parser__expr__test__expr-2.snap
---
source: py2o2/src/parser/expr.rs
expression: "expr(\"1.0\").finish().unwrap()"
---
(
    "",
    Constant {
        value: Float(
            1.0,
        ),
    },
)
