py2o2/src/parser/snapshots/py2o2__parser__expr__test__expr-4.snap
---
source: py2o2/src/parser/expr.rs
expression: "expr(\"()\").finish().unwrap()"
---
(
    "",
    Tuple {
        elts: [],
    },
)
