py2o2/src/parser/snapshots/py2o2__parser__expr__test__expr-5.snap
---
source: py2o2/src/parser/expr.rs
expression: "expr(\"(a, 1.0)\").finish().unwrap()"
---
(
    "",
    Tuple {
        elts: [
            Name {
                id: "a",
            },
            Constant {
                value: Float(
                    1.0,
                ),
            },
        ],
    },
)
