py2o2/src/parser/snapshots/py2o2__parser__expr__test__expr-6.snap
---
source: py2o2/src/parser/expr.rs
expression: "expr(\"sys.version_info >= (3, 9)\").finish().unwrap()"
---
(
    "",
    Compare {
        left: Name {
            id: Identifier {
                components: [
                    "sys",
                    "version_info",
                ],
            },
        },
        ops: GtE,
        comparators: Tuple {
            elts: [
                Constant {
                    value: Float(
                        3.0,
                    ),
                },
                Constant {
                    value: Float(
                        9.0,
                    ),
                },
            ],
        },
    },
)
