py2o2/src/parser/snapshots/py2o2__parser__expr__test__expr-8.snap
---
source: py2o2/src/parser/expr.rs
expression: "expr(\"f()\").finish().unwrap()"
---
(
    "",
    Call {
        func: Name {
            id: "f",
        },
        args: [],
        keywords: [],
    },
)
