py2o2/src/parser/snapshots/py2o2__parser__expr__test__expr-9.snap
---
source: py2o2/src/parser/expr.rs
expression: "expr(\"f(1, 2)\").finish().unwrap()"
---
(
    "",
    Call {
        func: Name {
            id: "f",
        },
        args: [
            Constant {
                value: Float(
                    1.0,
                ),
            },
            Constant {
                value: Float(
                    2.0,
                ),
            },
        ],
        keywords: [],
    },
)
